--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									<ul class="dropdown-menu dropdown-navbar">
 										<li>
 											<a href="#" class="clearfix">
-												<img src="resources/assets/avatars/avatar.png" class="msg-photo" alt="Alex's Avatar" />
+												<img src="resources/assets/avatars/avatar.png" class="msg-photo" />
 												<span class="msg-body">
 													<span class="msg-title">
 														<span class="blue">王五:</span>
@@ -66,7 +66,7 @@
 										</li>
 										<li>
 											<a href="#" class="clearfix">
-												<img src="resources/assets/avatars/avatar3.png" class="msg-photo" alt="Susan's Avatar" />
+												<img src="resources/assets/avatars/avatar3.png" class="msg-photo"/>
 												<span class="msg-body">
 													<span class="msg-title">
 														<span class="blue">张三:</span>
@@ -81,7 +81,7 @@
 										</li>
 										<li>
 											<a href="#" class="clearfix">
-												<img src="resources/assets/avatars/avatar4.png" class="msg-photo" alt="Bob's Avatar" />
+												<img src="resources/assets/avatars/avatar4.png" class="msg-photo" />
 												<span class="msg-body">
 													<span class="msg-title">
 														<span class="blue">李四:</span>
@@ -96,7 +96,7 @@
 										</li>
 										<li>
 											<a href="#" class="clearfix">
-												<img src="resources/assets/avatars/avatar2.png" class="msg-photo" alt="Kate's Avatar" />
+												<img src="resources/assets/avatars/avatar2.png" class="msg-photo" />
 												<span class="msg-body">
 													<span class="msg-title">
 														<span class="blue">杨六:</span>
@@ -111,7 +111,7 @@
 										</li>
 										<li>
 											<a href="#" class="clearfix">
-												<img src="resources/assets/avatars/avatar5.png" class="msg-photo" alt="Fred's Avatar" />
+												<img src="resources/assets/avatars/avatar5.png" class="msg-photo"/>
 												<span class="msg-body">
 													<span class="msg-title">
 														<span class="blue">陈一:</span>
@@ -131,7 +131,7 @@
 
 						<li class="light-blue">
 							<a data-toggle="dropdown" href="#" class="dropdown-toggle">
-								<img class="nav-user-photo" src="resources/assets/avatars/user.jpg" alt="Jason's Photo" />
+								<img class="nav-user-photo" src="resources/assets/avatars/user.jpg"/>
 								<span class="user-info">
 									<small>欢迎,</small>
 									Rex
