--- a/introduce.html
+++ b/introduce.html
@@ -21,7 +21,7 @@
                     <strong class="blue">
                         PM项目管理系统
                     </strong>
-                    ,以下项目基本情况简介.	
+                    ,以下为个人博客项目的基本情况简介.	
                 </div>
                 <hr>
                 <div class="row">
@@ -53,10 +53,7 @@
                                                 <div class="dd-handle btn-pink no-hover">设计组</div>
                                                 <ol class="dd-list">
                                                     <li class="dd-item">
-                                                        <div class="dd-handle">张三</div>
-                                                    </li>
-                                                    <li class="dd-item">
-                                                        <div class="dd-handle">李四</div>
+                                                        <div class="dd-handle">安迪</div>
                                                     </li>
                                                 </ol>
                                             </li>
@@ -64,10 +61,16 @@
                                                 <div class="dd-handle btn-grey no-hover">开发组</div>
                                                 <ol class="dd-list">
                                                     <li class="dd-item">
-                                                        <div class="dd-handle">张三</div>
+                                                        <div class="dd-handle">小美</div>
                                                     </li>
                                                     <li class="dd-item">
-                                                        <div class="dd-handle">李四</div>
+                                                        <div class="dd-handle">小思</div>
+                                                    </li>
+                                                    <li class="dd-item">
+                                                        <div class="dd-handle">小关</div>
+                                                    </li>
+                                                    <li class="dd-item">
+                                                        <div class="dd-handle">小曲</div>
                                                     </li>
                                                 </ol>
                                             </li>
@@ -75,10 +78,7 @@
                                                 <div class="dd-handle btn-purple no-hover">测试组</div>
                                                 <ol class="dd-list">
                                                     <li class="dd-item">
-                                                        <div class="dd-handle">张三</div>
-                                                    </li>
-                                                    <li class="dd-item">
-                                                        <div class="dd-handle">李四</div>
+                                                        <div class="dd-handle">莹莹</div>
                                                     </li>
                                                 </ol>
                                             </li>
@@ -99,7 +99,10 @@
 
                                     <div class="widget-body">
                                         <div class="widget-main">
-                                            在社会飞速发展的形势下，项目无处不在，各行各业都有属于自身不同的项目，有了项目，就需要有项目计划，项目安排以及项目管理等事情。一个项目的管理好坏，直接影响到了项目的执行情况，收益好坏，良好的项目管理能很好地提高企业的竞争力。随着国家对基础建设的巨大投入，市场日趋激烈的竞争和经济的全球化浪潮，项目管理得到空前的重视和发展，从局部到全面应用，从表面到实际的企业需求。可以看到，项目管理已经在社会中扮演着重要的角色。使软件的开发流程更加合理，减少开发的耦合度，提高项目的开发效率，优化项目开发过程的数据管理。
+                                            博客的精神是：自由表达，开放宽容，个性张扬，专业精神。 
+                                            在没有自己的博客之前，人们会经常进出于论坛发表贴子或者通过即时通信软件聊天，来表达自已的想法，
+                                            可是这些都是零散的和杂乱的。博客的出现，让人们可以不断的把自己以前的和每天激发的一些想法或者感受整理放在自己的博客上，
+                                            每次在写文章的时候，可能又会产生新的想法。经常写博客可以梳理我们日常生活的灵感以及新知识，或是生活感悟与趣事。
                                         </div>
                                     </div>
                                 </div>
@@ -121,19 +124,18 @@
                                     <div class="widget-body">
                                         <div class="widget-main">
                                             <dl id="dt-list-1">
-                                                <dt>用户模块</dt>
+                                                <dt>1、用户模块</dt>
                                                 <dd>包含用户登录、注册、用户资料等功能。</dd>
-                                                <dt>系统消息</dt>
+                                                <dd>1）包含用户登录；/dd>
+                                                <dd>2）用户注册；</dd>
+                                                <dd>3）个人信息查看与修改；</dd>
+                                                <dt>2、文章模块</dt>
                                                 <dd>系统消息推送通知。</dd>
-                                                <dt>项目介绍</dt>
-                                                <dd>介绍项目基本情况，以及项目人员分配情况</dd>
-                                                <dt>数据管理</dt>
-                                                <dd>1、数据表管理</dd>
-                                                <dd>2、数据管理</dd>
-                                                <dt>项目资料</dt>
-                                                <dd>包含需求管理、设计管理、开发管理、测试管理、项目约束等功能</dd>
-                                                <dt>系统日志管理</dt>
-                                                <dd>记录用户日常操作情况，以及项目状态信息</dd>
+                                                <dd>1）发表文章；</dd>
+                                                <dd>2）文章浏览；</dd>
+                                                <dd>3）发表评论；</dd>
+                                                <dd>4）文章修改；</dd>
+                                                <dd>5）文章删除；</dd>
                                             </dl>
                                         </div>
                                     </div>
