--- a/log.html
+++ b/log.html
@@ -32,7 +32,7 @@
 												<div class="timeline-items">
 													<div class="timeline-item clearfix">
 														<div class="timeline-info">
-															<img alt="Susan't Avatar" src="resources/assets/avatars/avatar1.png" />
+															<img src="resources/assets/avatars/avatar1.png" />
 															<span class="label label-info label-sm">16:22</span>
 														</div>
 
@@ -154,10 +154,10 @@
 																			<i class="icon-chevron-left blue bigger-110"></i>
 
 																			&nbsp;
-																			<img alt="Image 4" width="36" src="resources/assets/images/gallery/thumb-4.jpg" />
-																			<img alt="Image 3" width="36" src="resources/assets/images/gallery/thumb-3.jpg" />
-																			<img alt="Image 2" width="36" src="resources/assets/images/gallery/thumb-2.jpg" />
-																			<img alt="Image 1" width="36" src="resources/assets/images/gallery/thumb-1.jpg" />
+																			<img width="36" src="resources/assets/images/gallery/thumb-4.jpg" />
+																			<img width="36" src="resources/assets/images/gallery/thumb-3.jpg" />
+																			<img width="36" src="resources/assets/images/gallery/thumb-2.jpg" />
+																			<img width="36" src="resources/assets/images/gallery/thumb-1.jpg" />
 																			&nbsp;
 																			<i class="icon-chevron-right blue bigger-110"></i>
 																		</div>
