--- a/need.html
+++ b/need.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>项目约束</title>
+		<title>项目需求</title>
 		<link href="resources/assets/css/bootstrap.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="resources/assets/font-awesome/4.2.0/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="resources/assets/fonts/fonts.googleapis.com.css" />
@@ -47,11 +47,11 @@
                                                             <div class="message-list" id="message-list">
                                                                 <div class="message-item message-unread">
                                                                     <label class="inline" style="width: 45px;">1</label>
-                                                                    <span class="sender" title="Alex John Red Smith">Alex John Red Smith </span>
+                                                                    <span class="sender" title="Alex John Red Smith">小美</span>
                                                                     <span class="time">1:33 pm</span>
                                                                     <span class="summary">
                                                                         <span class="text">
-                                                                            完成任务K
+                                                                            完成个人博客的登录页面
                                                                         </span>
                                                                     </span>
                                                                     <span class="text" style="float: right;margin-right: 250px;">
@@ -60,20 +60,20 @@
                                                                     <div class="message-content" style="display:block;">
                                                                         <div class="message-header clearfix">
                                                                             <div class="pull-left">
-                                                                                <span class="blue bigger-125"> Clik to open this message </span>
+                                                                                <span class="blue bigger-125"> 完成个人博客的登录页面 </span>
 
                                                                                 <div class="space-4"></div>
 
                                                                                 <i class="ace-icon fa fa-star orange2"></i>
 
                                                                                 &nbsp;
-                                                                                <img class="middle" alt="John's Avatar" src="resources/assets/avatars/avatar.png" width="32">
+                                                                                <img class="middle" src="resources/assets/avatars/avatar.png" width="32">
                                                                                 &nbsp;
-                                                                                <a href="#" class="sender">John Doe</a>
+                                                                                <a href="#" class="sender">张三</a>
 
                                                                                 &nbsp;
                                                                                 <i class="ace-icon fa fa-clock-o bigger-110 orange middle"></i>
-                                                                                <span class="time grey">Today, 7:15 pm</span>
+                                                                                <span class="time grey">今天, 19:15</span>
                                                                             </div>
 
                                                                             <div class="pull-right action-buttons">
@@ -95,15 +95,15 @@
 
                                                                         <div class="message-body ace-scroll" style="position: relative;"><div class="scroll-track scroll-visible scroll-active" style="display: block; height: 150px;"><div class="scroll-bar" style="height: 134px; top: 0px;"></div></div><div class="scroll-content" style="max-height: 150px;">
                                                                             <p>
-                                                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                                                                1、完成用户登录界面；
                                                                             </p>
 
                                                                             <p>
-                                                                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                                                                2、界面包括输入用户名和密码；
                                                                             </p>
 
                                                                             <p>
-                                                                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                                                                                3、提供记住密码选项；
                                                                             </p>
                                                                         </div></div>
 
@@ -111,9 +111,9 @@
 
                                                                         <div class="message-attachment clearfix">
                                                                             <div class="attachment-title">
-                                                                                <span class="blue bolder bigger-110">Attachments</span>
+                                                                                <span class="blue bolder bigger-110">附件</span>
                                                                                 &nbsp;
-                                                                                <span class="grey">(2 files, 4.5 MB)</span>
+                                                                                <span class="grey">(2 个文件, 4.5 MB)</span>
 
                                                                                 <div class="inline position-relative">
                                                                                     <a href="#" data-toggle="dropdown" class="dropdown-toggle">
@@ -138,15 +138,15 @@
                                                                                 <li>
                                                                                     <a href="#" class="attached-file">
                                                                                         <i class="ace-icon fa fa-file-o bigger-110"></i>
-                                                                                        <span class="attached-name">Document1.pdf</span>
+                                                                                        <span class="attached-name">登录界面设计.pdf</span>
                                                                                     </a>
 
                                                                                     <span class="action-buttons">
-                                                                                        <a href="#">
+                                                                                        <a href="">
                                                                                             <i class="ace-icon fa fa-download bigger-125 blue"></i>
                                                                                         </a>
 
-                                                                                        <a href="#">
+                                                                                        <a href="">
                                                                                             <i class="ace-icon fa fa-trash-o bigger-125 red"></i>
                                                                                         </a>
                                                                                     </span>
@@ -155,7 +155,7 @@
                                                                                 <li>
                                                                                     <a href="#" class="attached-file">
                                                                                         <i class="ace-icon fa fa-film bigger-110"></i>
-                                                                                        <span class="attached-name">Sample.mp4</span>
+                                                                                        <span class="attached-name">功能需求声明.docx</span>
                                                                                     </a>
 
                                                                                     <span class="action-buttons">
@@ -178,17 +178,17 @@
                                                                     </label>
 
                                                                     <span class="sender" title="John Doe">
-                                                                        John Doe
+                                                                        安迪
                                                                         <span class="light-grey">(4)</span>
                                                                     </span>
-                                                                    <span class="time">7:15 pm</span>
+                                                                    <span class="time">19:15</span>
                                                                     <span class="text" style="float: right;margin-right: 250px;">
-                                                                        开发中 50%
+                                                                        已完成 100%
                                                                     </span>
 
                                                                     <span class="summary">
                                                                         <span class="text">
-                                                                            完成任务H
+                                                                            完成用户注册页面的界面设计图
                                                                         </span>
                                                                     </span>
                                                                 </div>
@@ -196,14 +196,14 @@
                                                                 <div class="message-item">
                                                                     <label class="inline" style="width:45px;">3</label>
 
-                                                                    <span class="sender" title="Philip Markov">Philip Markov </span>
-                                                                    <span class="time">10:15 am</span>
+                                                                    <span class="sender" title="Philip Markov">小关</span>
+                                                                    <span class="time">10:15</span>
                                                                     <span class="text" style="float: right;margin-right: 250px;">
-                                                                        开发中 50%
+                                                                        开发中 10%
                                                                     </span>
                                                                     <span class="summary">
                                                                         <span class="text">
-                                                                            完成任务G
+                                                                            完成个人信息查看与修改功能
                                                                         </span>
                                                                     </span>
                                                                 </div>
@@ -211,14 +211,14 @@
                                                                 <div class="message-item">
                                                                     <label class="inline" style="width:45px;">4</label>
 
-                                                                    <span class="sender" title="Sabrina">Sabrina </span>
-                                                                    <span class="time">Yesterday</span>
+                                                                    <span class="sender" title="Sabrina">小曲 </span>
+                                                                    <span class="time">昨天</span>
                                                                     <span class="text" style="float: right;margin-right: 250px;">
-                                                                        开发中 50%
+                                                                        开发中 20%
                                                                     </span>
                                                                     <span class="summary">
                                                                         <span class="text">
-                                                                            完成任务F
+                                                                            完成文章模块中发表文章的功能模块页面
                                                                         </span>
                                                                     </span>
                                                                 </div>
@@ -226,15 +226,15 @@
                                                                 <div class="message-item">
                                                                     <label class="inline" style="width:45px;">5</label>
 
-                                                                    <span class="sender" title="Philip Markov">Philip Markov </span>
+                                                                    <span class="sender" title="Philip Markov">莹莹</span>
                                                                     <span class="time">Yesterday</span>
                                                                     <span class="text" style="float: right;margin-right: 250px;">
-                                                                        开发中 50%
+                                                                        测试中 50%
                                                                     </span>
 
                                                                     <span class="summary">
                                                                         <span class="text">
-                                                                            完成任务E
+                                                                            对用户页面功能进行测试
                                                                         </span>
                                                                     </span>
                                                                 </div>
@@ -242,7 +242,7 @@
                                                                 <div class="message-item">
                                                                     <label class="inline" style="width:45px;">6</label>
 
-                                                                    <span class="sender" title="Doctor Gomenz">Doctor Gomenz </span>
+                                                                    <span class="sender" title="Doctor Gomenz">莹莹</span>
                                                                     <span class="time">April 5</span>
                                                                     <span class="text" style="float: right;margin-right: 250px;">
                                                                         开发中 50%
