--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
 										<div class="col-xs-12 col-sm-3 center">
 											<div>
 												<span class="profile-picture">
-													<img id="avatar" class="editable img-responsive" alt="Alex's Avatar" src="resources/assets/avatars/profile-pic.jpg" />
+													<img id="avatar" class="editable img-responsive" src="resources/assets/avatars/profile-pic.jpg" />
 												</span>
 
 												<div class="space-4"></div>
@@ -159,7 +159,7 @@
 														<div id="profile-feed-1" class="profile-feed">
 															<div class="profile-activity clearfix">
 																<div>
-																	<img class="pull-left" alt="Alex Doe's avatar" src="resources/assets/avatars/avatar5.png" />
+																	<img class="pull-left" src="resources/assets/avatars/avatar5.png" />
 																	<a class="user" href="#"> Rex </a>
 																	提交了任务A
 																	<div class="time">
@@ -171,7 +171,7 @@
 
 															<div class="profile-activity clearfix">
 																<div>
-																	<img class="pull-left" alt="Susan Smith's avatar" src="resources/assets/avatars/avatar1.png" />
+																	<img class="pull-left" src="resources/assets/avatars/avatar1.png" />
 																	<a class="user" href="#"> 李四 </a>
 
 																	审核了任务A
